2006-04-18  Jakub Steiner <jimmac@ximian.com>

	* accessories-dictionary: contributed by Ulisse Perusin <uli.peru@gmail.com>

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-04-15  Dennis Cranston  <dennis_cranston@yahoo.com>

	* 48x48/apps/gnome-searchtool-animation-rest.png:
	* 48x48/apps/gnome-searchtool-animation.png: apply tango style

2006-04-14  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/media-floppy.svg: another great contribution by
		Lapo

2006-04-14  Rodney Dawes  <dobey@novell.com>

	* 48x48/devices/battery.png:
	* 48x48/devices/computer.png:
	* 48x48/devices/input-*.png:
	Removed these, as updated scalable versions exist now

2006-04-14  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/battery.svg:
	* scalable/devices/input-mouse.svg: good traces by Lapo
		Calamandrei
	
2006-04-13  Jakub Steiner <jimmac@ximian.com>

	* computer: contributed by Lapo Calamandrei
	* input-keyboard: cooperation with Lapo Calamandrei
	
2006-04-10  Jakub Steiner <jimmac@ximian.com>

	* scalable/devices/drive-cdrom.svg: fix perspective (help by Lapo
		Calamandrei)
	
2006-04-07  Rodney Dawes  <dobey@novell.com>

	* 24x24/devices/video-display.png:
	* 24x24/status/image-loading.png:
	* 24x24/status/media-playlist-*.png:
	* 24x24/status/weather-*.png: Update these icons from the newly drawn
	22x22 device and status icons

2006-04-07  Rodney Dawes  <dobey@novell.com>

	* 24x24/actions/*.png: Generate updated versions from the newly drawn
	22x22 action icons

2006-04-07  Rodney Dawes  <dobey@novell.com>

	* 48x48/status/Makefile.am:
	* 48x48/status/weather-clear-night.png: Replaced with updated version
	in the Scalable size

	* scalable/status/Makefile.am: Add weather-clear-night.svg and the
	folder-open.icon and folder-open.svg files

2006-04-07  Jakub Steiner <jimmac@ximian.com>

	* weather-clear-night: "... not because it's easy, but because it is