@@ -1,3 +1,9 @@
+2006-04-19  Rodney Dawes  <dobey@novell.com>
+
+	* scalable/apps/Makefile.am: Fix a typo in the files list, svg not png
+
+	Fixes #339043
+	
 2006-04-18  Jakub Steiner <jimmac@ximian.com>
 
 	* accessories-dictionary: contributed by Ulisse Perusin <uli.peru@gmail.com>
